# incy

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.api  MVP.md  Makefile  PLAN.md  README.md  main.py  pyproject.toml
apps/api/: alembic.ini  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 6d574a660cd9_add_webhook_subscriptions.py  a1b2c3d4e5f6_add_unique_constraint_memberships.py  b2c3d4e5f6a7_add_integration_health_tracking.py  c3d4e5f6a7b8_add_schedules_and_escalation.py  ca0b444bf2f5_initial.py  d4e5f6a7b8c9_add_incident_details.py  e5f6a7b8c9d0_add_route_by_label.py  f6a7b8c9d0e1_add_agent_task_updates.py
apps/api/app/: config.py  main.py  seed.py
apps/api/app/middleware/: error_handler.py  rate_limiter.py
apps/api/app/models/: __init__.py  agent_task_update.py  alert.py  audit_log.py  escalation_policy.py  (+14 more)
apps/web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/e2e/: escalation-policies.spec.ts  incidents.spec.ts  schedules.spec.ts  services.spec.ts
apps/worker/: requirements.txt
apps/worker/worker/: config.py  main.py  smtp_sender.py  webhook_sender.py
infra/: app.yaml  docker-compose.yml
infra/chaos/: agent-queue-demo.sh  incy-demo.sh  sev0-webhook-demo.sh
infra/k8s/: mongodb.yaml
infra/k8s/incy/: 00-namespace.yaml  10-config.yaml  20-postgres.yaml  30-migrate-job.yaml  40-api.yaml  50-worker.yaml  60-web.yaml  61-web-dist-loader.yaml  70-tailscale.yaml  80-webhook-sink.yaml  81-redis.yaml  82-taskq.yaml  83-agent.yaml
worker/: config.py  main.py  smtp_sender.py
(+40 files in other folders)
