[project]
name = "incy"
version = "0.1.0"
description = "Reliable incident management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.129.0",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy==2.0.46",
    "alembic==1.18.4",
    "psycopg[binary]>=3.2",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "python-dotenv==1.2.1",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "ruff==0.15.1",
]
